// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`EcIcon > should pass custom attributes 1`] = `
<svg
  class="ec-icon my-class"
  data-test="my-custom-icon"
  id="my-icon"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should render properly when a name was given 1`] = `
<svg
  class="ec-icon"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should use the given size prop 1`] = `
<svg
  class="ec-icon"
  height="16"
  width="16"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should use the type "error" 1`] = `
<svg
  class="ec-icon ec-icon--error"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should use the type "info" 1`] = `
<svg
  class="ec-icon ec-icon--info"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should use the type "success" 1`] = `
<svg
  class="ec-icon ec-icon--success"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should use the type "undefined" 1`] = `
<svg
  class="ec-icon"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;

exports[`EcIcon > should use the type "warning" 1`] = `
<svg
  class="ec-icon ec-icon--warning"
>
  <use
    xlink:href="#ec-simple-add"
  />
</svg>
`;
